--- a/src/main/resources/ArtistMainPage.fxml
+++ b/src/main/resources/ArtistMainPage.fxml
@@ -12,12 +12,10 @@
    <top>
       <AnchorPane prefHeight="113.0" prefWidth="1146.0" style="-fx-background-color: #7FFFD4;" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="artbutton" layoutX="231.0" layoutY="36.0" mnemonicParsing="false" onAction="#artbuttonAction" prefHeight="64.0" prefWidth="156.0" style="-fx-border-radius: 15; -fx-background-radius: 20;" text="Art" />
-            <Button fx:id="customersbutton" layoutX="738.0" layoutY="36.0" mnemonicParsing="false" onAction="#customersbuttonAction" prefHeight="64.0" prefWidth="156.0" style="-fx-border-radius: 15; -fx-background-radius: 20;" text="Customers" />
+            <Button fx:id="artbutton" layoutX="83.0" layoutY="25.0" mnemonicParsing="false" onAction="#artbuttonAction" prefHeight="64.0" prefWidth="156.0" style="-fx-border-radius: 15; -fx-background-radius: 20;" text="Art" />
+            <Button fx:id="customersbutton" layoutX="471.0" layoutY="23.0" mnemonicParsing="false" onAction="#customersbuttonAction" prefHeight="67.0" prefWidth="165.0" style="-fx-border-radius: 15; -fx-background-radius: 20;" text="Customers" />
+            <Button fx:id="signoutbutton" layoutX="882.0" layoutY="24.0" mnemonicParsing="false" onAction="#signoutbuttonAction" prefHeight="66.0" prefWidth="164.0" style="-fx-background-radius: 20; -fx-border-radius: 15;" text="Sign out" />
          </children>
       </AnchorPane>
    </top>
-   <bottom>
-      <Button fx:id="signoutbutton" mnemonicParsing="false" onAction="#signoutbuttonAction" prefHeight="56.0" prefWidth="158.0" style="-fx-background-radius: 20; -fx-border-radius: 15;" text="Sign out" BorderPane.alignment="CENTER" />
-   </bottom>
 </BorderPane>
