--- a/src/main/resources/art_add.fxml
+++ b/src/main/resources/art_add.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="DescriptionPane" prefHeight="567.0" prefWidth="580.0" style="-fx-background-color: #fffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.art_addController">
+<BorderPane fx:id="DescriptionPane" prefHeight="567.0" prefWidth="580.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.art_addController">
    <bottom>
-      <Button fx:id="addart" mnemonicParsing="false" onAction="#addartAction" prefHeight="49.0" prefWidth="222.0" style="-fx-background-color: #7FFFD4; -fx-text-fill: #000; -fx-background-radius: 10;" text="Add" BorderPane.alignment="CENTER">
+      <Button fx:id="addart" mnemonicParsing="false" onAction="#addartAction" prefHeight="35.0" prefWidth="175.0" style="-fx-background-color: #7FFFD4; -fx-text-fill: #000; -fx-background-radius: 10;" text="Add" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="40.0" />
          </BorderPane.margin>
@@ -22,10 +22,12 @@
             <Label layoutX="21.0" layoutY="197.0" prefHeight="42.0" prefWidth="97.0" style="-fx-text-fill: #000;" text="Size" />
             <Label layoutX="21.0" layoutY="261.0" prefHeight="42.0" prefWidth="97.0" style="-fx-text-fill: #000;" text="Materials" />
             <Label layoutX="21.0" layoutY="329.0" prefHeight="42.0" prefWidth="133.0" style="-fx-text-fill: #000;" text="Desription: " />
-            <TextField fx:id="adresstextfield" layoutX="205.0" layoutY="155.0" prefHeight="25.0" prefWidth="186.0" />
-            <TextField fx:id="pricetextfield" layoutX="205.0" layoutY="206.0" prefHeight="25.0" prefWidth="187.0" />
-            <TextField fx:id="utilitiestextfield" layoutX="204.0" layoutY="269.0" prefHeight="25.0" prefWidth="188.0" />
+            <TextField fx:id="pricetextfield" layoutX="205.0" layoutY="155.0" prefHeight="25.0" prefWidth="186.0" />
+            <TextField fx:id="sizetextfield" layoutX="205.0" layoutY="206.0" prefHeight="25.0" prefWidth="187.0" />
+            <TextField fx:id="materialstextfield" layoutX="204.0" layoutY="269.0" prefHeight="25.0" prefWidth="188.0" />
             <TextField fx:id="descriptiontextfield" layoutX="203.0" layoutY="338.0" prefHeight="25.0" prefWidth="191.0" />
+            <Label layoutX="21.0" layoutY="395.0" prefHeight="24.0" prefWidth="96.0" text="Category" />
+            <TextField fx:id="categoryTextField" layoutX="203.0" layoutY="395.0" prefHeight="26.0" prefWidth="197.0" />
          </children>
       </AnchorPane>
    </center>
