--- a/src/main/resources/art_list.fxml
+++ b/src/main/resources/art_list.fxml
@@ -9,10 +9,13 @@
 
 <BorderPane fx:id="searchPane" prefHeight="723.0" prefWidth="1049.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.art_listController">
    <top>
-      <AnchorPane prefHeight="156.0" prefWidth="898.0" style="-fx-background-color: #ffff;" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="127.0" prefWidth="1049.0" style="-fx-background-color: #ffff;" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets />
          </BorderPane.margin>
+         <children>
+            <Button fx:id="add_art" layoutX="421.0" layoutY="47.0" mnemonicParsing="false" onAction="#add_artAction" prefHeight="34.0" prefWidth="208.0" style="-fx-background-color: #7FFFD4; -fx-background-radius: 10;" text="Add" />
+         </children>
       </AnchorPane>
    </top>
    <center>
@@ -28,7 +31,4 @@
          </padding>
       </ScrollPane>
    </center>
-   <bottom>
-      <Button fx:id="add_art" mnemonicParsing="false" onAction="#add_artAction" prefHeight="59.0" prefWidth="208.0" style="-fx-background-color: #7FFFD4; -fx-background-radius: 10;" text="Add" BorderPane.alignment="CENTER" />
-   </bottom>
 </BorderPane>
