--- a/src/main/resources/customer.fxml
+++ b/src/main/resources/customer.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -8,15 +9,24 @@
 
 <BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="692.0" prefWidth="1146.0" style="-fx-background-color: #7FFFD4;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Customer">
    <center>
-      <Pane fx:id="centrePane" prefHeight="692.0" prefWidth="1050.0" style="-fx-background-color: #F0FFFF;" BorderPane.alignment="CENTER" />
+      <Pane fx:id="centrePane" prefHeight="692.0" prefWidth="1050.0" style="-fx-background-color: #F0FFFF;" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="50.0" layoutY="205.0" prefHeight="40.0" prefWidth="292.0" style="-fx-border-color: #000;" text="      Painting" />
+            <Label layoutX="50.0" layoutY="262.0" prefHeight="40.0" prefWidth="292.0" style="-fx-border-color: #000;" text="     Drawing" />
+            <Label layoutX="49.0" layoutY="314.0" prefHeight="40.0" prefWidth="295.0" style="-fx-border-color: #000;" text="      Sculpture" />
+            <Label layoutX="230.0" layoutY="30.0" prefHeight="52.0" prefWidth="425.0" style="-fx-font-size: 15;" text="Here we have all the art categories available on our platform" />
+            <Label layoutX="493.0" layoutY="205.0" prefHeight="40.0" prefWidth="292.0" style="-fx-border-color: #000;" text="    Music" />
+            <Label layoutX="493.0" layoutY="262.0" prefHeight="40.0" prefWidth="292.0" style="-fx-border-color: #000;" text="    Poetry" />
+            <Label layoutX="493.0" layoutY="314.0" prefHeight="40.0" prefWidth="292.0" style="-fx-border-color: #000;" text="      Photography" />
+         </children></Pane>
    </center>
    <top>
       <AnchorPane prefHeight="65.0" prefWidth="1146.0" style="-fx-background-color: #7FFFD4;" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="artBrowse" layoutX="602.0" layoutY="16.0" mnemonicParsing="false" onAction="#artBrowseAction" prefHeight="33.0" prefWidth="264.0" style="-fx-background-color: #F0FFFF; -fx-text-fill: #000;" text="Art Catalog" />
+            <Button fx:id="artCatalog" layoutX="602.0" layoutY="16.0" mnemonicParsing="false" onAction="#artCatalogAction" prefHeight="33.0" prefWidth="264.0" style="-fx-background-color: #F0FFFF; -fx-text-fill: #000;" text="Art Catalog" />
             <Button fx:id="signoutbutton" layoutX="1028.0" layoutY="14.0" mnemonicParsing="false" onAction="#signoutbuttonAction" prefHeight="37.0" prefWidth="75.0" style="-fx-background-radius: 20; -fx-border-radius: 15; -fx-background-color: #F0FFFF; -fx-text-fill: #000;" text="Sign out" />
             <TextField layoutX="192.0" layoutY="14.0" prefHeight="34.0" prefWidth="323.0" style="-fx-background-color: #F0FFFF; -fx-border-radius: 15; -fx-background-radius: 20; -fx-border-width: 0;" />
-            <Button layoutX="115.0" layoutY="14.0" mnemonicParsing="false" prefHeight="34.0" style="-fx-background-color: #F0FFFF; -fx-text-fill: #000; -fx-border-color: #7FFFD4; -fx-border-width: 1;" text="Browse" />
+            <Button fx:id="BrowseArt" layoutX="115.0" layoutY="14.0" mnemonicParsing="false" onAction="#BrowseAction" prefHeight="34.0" style="-fx-background-color: #F0FFFF; -fx-text-fill: #000; -fx-border-color: #7FFFD4; -fx-border-width: 1;" text="Browse" />
          </children>
       </AnchorPane>
    </top>
