--- a/src/main/resources/art_list.fxml
+++ b/src/main/resources/art_list.fxml
@@ -24,7 +24,7 @@
             <Insets />
          </BorderPane.margin>
          <content>
-            <VBox fx:id="apartmentsLayout" prefHeight="502.0" prefWidth="896.0" style="-fx-background-color: #fff;" />
+            <VBox fx:id="vbox" prefHeight="502.0" prefWidth="896.0" style="-fx-background-color: #fff;" />
          </content>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" />
