small changes were made

--- a/src/main/resources/ArtistMainPage.fxml
+++ b/src/main/resources/ArtistMainPage.fxml
@@ -12,8 +12,8 @@
    <top>
       <AnchorPane prefHeight="67.0" prefWidth="1146.0" style="-fx-background-color: #7FFFD4;" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="artbutton" layoutX="200.0" layoutY="17.0" mnemonicParsing="false" onAction="#artbuttonAction" prefHeight="34.0" prefWidth="134.0" style="-fx-border-radius: 15; -fx-background-radius: 20; -fx-background-color: #ffff; -fx-text-fill: #000;" text="Art" />
-            <Button fx:id="customersbutton" layoutX="672.0" layoutY="17.0" mnemonicParsing="false" onAction="#customersbuttonAction" prefHeight="33.0" prefWidth="134.0" style="-fx-border-radius: 15; -fx-background-radius: 20; -fx-background-color: #ffff; -fx-text-fill: #000;" text="Customers" />
+            <Button fx:id="artbutton" layoutX="147.0" layoutY="18.0" mnemonicParsing="false" onAction="#artbuttonAction" prefHeight="34.0" prefWidth="299.0" style="-fx-border-radius: 15; -fx-background-color: #fff; -fx-text-fill: #000;" text="Art" />
+            <Button fx:id="customersbutton" layoutX="623.0" layoutY="18.0" mnemonicParsing="false" onAction="#customersbuttonAction" prefHeight="33.0" prefWidth="325.0" style="-fx-background-color: #ffff; -fx-text-fill: #000;" text="Customers" />
             <Button fx:id="signoutbutton" layoutX="1057.0" layoutY="17.0" mnemonicParsing="false" onAction="#signoutbuttonAction" prefHeight="33.0" prefWidth="66.0" style="-fx-background-radius: 20; -fx-border-radius: 15; -fx-background-color: #ffff; -fx-text-fill: #000;" text="Sign out" />
          </children>
       </AnchorPane>
